[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/start.png" type="Texture" id=1]
[ext_resource path="res://ui/start_clicked.png" type="Texture" id=2]
[ext_resource path="res://ui/quit_clicked.png" type="Texture" id=3]
[ext_resource path="res://ui/quit.png" type="Texture" id=4]
[ext_resource path="res://ui/settings.png" type="Texture" id=5]
[ext_resource path="res://ui/settings_clicked.png" type="Texture" id=6]
[ext_resource path="res://ui/mythicalsporkasus.png" type="Texture" id=7]
[ext_resource path="res://main_menu_screen.gd" type="Script" id=8]

[node name="MainMenuScreen" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -270.0
margin_right = 480.0
margin_bottom = 270.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.0
margin_right = 175.0
margin_bottom = 110.0
focus_mode = 0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="."]
margin_left = 431.0
margin_top = 400.0
margin_right = 626.0
margin_bottom = 466.0
focus_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="TextureButton" parent="."]
margin_left = 352.0
margin_top = 400.0
margin_right = 419.0
margin_bottom = 469.0
focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -40.0
margin_right = 415.0
texture = ExtResource( 7 )

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
